# vibecode_project

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_OVERVIEW.md  README.md  RELEASE_CHECKLIST.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  local.db  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
migrations/: env.py
migrations/versions/: 0001_init.py  0002_channel_binding.py  0003_sources.py  0004_post_drafts.py  0005_publication_logs.py  0006_source_failures.py  0007_schedule.py  0008_usage_counters.py  0009_publication_logs_unscheduled.py
scripts/: backup_postgres.sh  update_prod.sh
src/: __init__.py
src/autocontent/: __init__.py
src/autocontent/api/: main.py  middleware.py  routes.py
src/autocontent/bot/: __init__.py  main.py  router.py  session_middleware.py  source_states.py  telegram_client_middleware.py
src/autocontent/config/: settings.py
src/autocontent/domain/: __init__.py  health.py  models.py
src/autocontent/infrastructure/: __init__.py  celery_app.py
src/autocontent/integrations/: __init__.py  llm_client.py  rss_client.py  task_queue.py  telegram_client.py  url_client.py
src/autocontent/shared/: db.py  (+7 more)
tests/: conftest.py  test_admin_api.py  test_antirepeat.py  test_autopost_schedule.py  test_bot_approval.py  test_bot_autopost.py  test_bot_drafts.py  test_bot_help_status.py  test_bot_onboarding.py  test_bot_templates.py  test_channel_binding.py  test_draft_templates.py  test_drafts.py  test_e2e.py  test_fetch_backoff.py  test_health.py  test_llm.py  test_logging.py  test_publication.py  test_publish.py  test_publish_retry_after.py  test_quota.py  test_rate_limit.py  test_repositories.py  test_request_id_middleware.py  test_safe_mode.py  test_sanitize.py  test_sanitize_draft.py  test_sources.py  test_startup_smoke.py  test_template_prompt.py  test_url_source.py  test_usage.py  test_vertical_pipeline.py
(+25 files in other folders)
